# constructor-agent

bob-agent/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt  start.sh  worker.railway.toml
bob-agent/.github/workflows/: ci.yml  deploy.yml
bob-agent/app/: config.py  main.py  worker.py
bob-agent/app/admin/: router.py  schemas.py
bob-agent/app/agent/: graph.py  prompts.py  state.py
bob-agent/app/agent/tools/: add_defect.py  events.py  send_report.py  update_defect.py
bob-agent/app/db/: database.py  models.py
bob-agent/app/db/migrations/: env.py
bob-agent/app/db/migrations/versions/: 0001_initial.py
bob-agent/app/db/repositories/: dedup_repo.py  defect_repo.py  site_repo.py
bob-agent/app/middleware/: auth.py  rate_limit.py
bob-agent/app/models/: webhook.py
bob-agent/app/services/: bridge_service.py  pdf_service.py  site_cache.py  soniox_service.py
bob-agent/app/utils/: formatting.py
bob-agent/tests/: conftest.py
bob-agent/tests/unit/: test_admin.py  test_bridge_service.py  test_db_repositories.py  test_formatting.py  test_health.py  test_pdf_service.py  test_site_cache.py  test_soniox_service.py  test_tools.py  test_webhook.py  test_worker.py
spec/: implementation_plan.md  product_spec.md  tech_spec.md  user_story.md
